@@ -3,6 +3,7 @@
  */
 
 03082007 - Fixed a comment in physfs.h. Renamed win32.c to windows.c.
+           Cleaned up whitespace/formatting in pocketpc.c
 11052006 - More 7zip archiver work (thanks, Dennis!). Initial Unicode work.
            Minor BeOS realpath tweak.
 09272006 - Reworked 7zip archiver (thanks, Dennis!).
